# jalali-calendar-cli

./: chatlog.org  jcal_all.pl  pyproject.toml  readme.org
jalali_calendar_cli/: 1403-holidays.json  holidays.json  jalali_calendar.py
